@@ -8,6 +8,7 @@ Bugfixes:
  - GBA BIOS: Fix RegisterRamReset setting DISPCNT to the wrong value
  - OpenGL: Correct boolean vector strcmp strings for uniforms
  - Wii: Fix tilting direction
+ - SDL: Fix joystick initialization on BS
 Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
